@@ -1,3 +1,5 @@
+1/11/17:  Added behrooziN() and milN() functions to Nevol.py, which allow the user to use the Bolshoi number density evolution functions from Behroozi et al. (2013) and Millennium number density evolution functions from Torrey et al. (2017).  Also added an optional variable type=[‘IllustrisCMF’, ‘MillenniumCMF’] to evolvingN() and sigmaN() which allows usage of number density evolution functions from Millennium.
+
 11/17/16:  Switched to fits from Muzzin et al. (2013) which fix alpha = -1.2 at high redshift.  Fixed bug in getmass().
 
 11/16/16:  Added mass functions from Muzzin et al. (2013), Ilbert et al. (2013), and Li & White (2009).  Changed the structure of the massfunction.py functions so that there are global functions getnum and getmass which take a keyword massfunc with one of the following values: ['illustris', 'zfourge', 'muzzin', 'ilbert', 'liwhite'].  Correspondingly, changed the optional arguments of functions in predictions.py to take that keyword instead of a function name.
